--- a/dspace/modules/xmlui-mirage2/src/main/webapp/themes/Mirage2/styles/_style.scss
+++ b/dspace/modules/xmlui-mirage2/src/main/webapp/themes/Mirage2/styles/_style.scss
@@ -127,8 +127,7 @@ p {
 // GLOBAL :HOVER ANIMATIONS \\ 
 // NAVIGATION BAR \\
 header .navbar-default a:after, .navbar-header a:after,
-header .breadcrumb.hidden-xs.hidden-sm a:after, .breadcrumb.hidden-xs.hidden-sm a:after,
-.input-group-btn span::after {
+header .breadcrumb.hidden-xs.hidden-sm a:after, .breadcrumb.hidden-xs.hidden-sm a:after {
   content: '';
   height: 2.5px;
   position: absolute;
@@ -140,8 +139,7 @@ header .breadcrumb.hidden-xs.hidden-sm a:after, .breadcrumb.hidden-xs.hidden-sm 
   transition: 0.6s;
 }
 header .navbar-default a:hover:after, .navbar-header a:hover:after,
-header .breadcrumb.hidden-xs.hidden-sm a:hover:after, .breadcrumb.hidden-xs.hidden-sm a:hover:after,
-.input-group-btn span:hover::after, .input-group-btn span:visited:hover::after {
+header .breadcrumb.hidden-xs.hidden-sm a:hover:after, .breadcrumb.hidden-xs.hidden-sm a:hover:after {
   width: 100%; 
   left: 0; 
 }
@@ -176,8 +174,7 @@ header .breadcrumb.hidden-xs.hidden-sm a:hover:after, .breadcrumb.hidden-xs.hidd
 .footer-links a, a:visited,
 .ds-table-row a, .ds-table-row a:visited,
 .control-group.col-sm-12 a, a:visited,
-#aspect_eperson_PasswordLogin_div_register a, a:visited,
-.input-group-btn span, span:visited {
+#aspect_eperson_PasswordLogin_div_register a, a:visited {
   position: relative;
 }
 .artifact-title a:hover, 
@@ -189,8 +186,7 @@ header .breadcrumb.hidden-xs.hidden-sm a:hover:after, .breadcrumb.hidden-xs.hidd
 .footer-links a:hover,
 .ds-table-row a:hover,
 .control-group.col-sm-12 a:hover,
-#aspect_eperson_PasswordLogin_div_register a:hover,
-.input-group-btn span:hover {
+#aspect_eperson_PasswordLogin_div_register a:hover {
   text-decoration: none;
 }
 .artifact-title a:after, a:visited:after, 
@@ -322,7 +318,8 @@ text-align: left;
   display: flex;
 }
 #footer-img-cont img {
-  margin-right: 20px;
+  margin-right: 30px;
+  width: 50%;
 }
 // RSS FEED POP-UP MENU \\
 #footer-rss {
@@ -343,11 +340,18 @@ text-align: left;
 }
 .rss-block {
   display: flex;
+  background-color: #f0f8ff;
+}
+.rss-p {
+  text-align: center;
+  margin: 5px 10px;
+  font-size: 14px;
 }
 #rss-item {
   background-color: #f0f8ff;
   border: none;
   height: 68px;
+  width: 68px;
 }
 #rss-dropdown:hover .rss-content {
   display: block;
@@ -392,14 +396,16 @@ a.list-group-item.active span {
 #aspect_viewArtifacts_Navigation_list_administrative {
   display: none;
 }
-.list-group, .input-group {
+.list-group, .input-group, 
+#aspect_discovery_SimpleSearch_field_scope {
   margin-bottom:   20px;
   padding-left: 0;
-  border: solid #2b466b;
+  border: solid #2b466b 2px;
   border-top-right-radius: 5px;
   border-top-left-radius: 5px
 }
-.input-group {
+.input-group, #aspect_viewArtifacts_Navigation_list_account, 
+#aspect_discovery_SimpleSearch_field_scope {
   border-radius: 5px;
 }
 .ds-text-field.form-control{
@@ -413,20 +419,15 @@ a.list-group-item.active span {
   border: 0;
   border-radius: 0;
 }
-/*.btn-primary:hover, .btn-primary:focus, .btn-primary.focus, .btn-primary:active, .btn-primary.active, .open>.btn-primary.dropdown-toggle:hover {
-  background-color: #396196;
-  border-color: #396196;
-}
-.btn-primary:hover, .btn-primary:focus, .btn-primary.focus, .btn-primary:active, .btn-primary.active, .open>.btn-primary.dropdown-toggle:hover #era-seach-form {
-  border-color: #396196;
-}*/
 .list-group-item:first-child {
   border-radius: 0;
 }
 
-.btn-primary, .list-group-item.active {
+.btn-primary, .list-group-item.active, .input-group-btn, 
+#aspect_discovery_CommunitySearch_field_submit {
   background-color: #2b466b;
   border-color: #2b466b;
+  color: #fff;
 }
 .list-group-item.active:hover {
   background-color: #2b466b;
@@ -439,8 +440,12 @@ a.list-group-item.active span {
   background-color: #d6eafc;
 }
 .sidebar-dropdown:hover .list-group-item.ds-option,
-.list-group-item.active, .list-group-item.active:hover, .list-group-item.active:focus, .list-group-item.ds-option {
+.list-group-item.active, .list-group-item.active:hover, 
+.list-group-item.active:focus, .list-group-item.ds-option {
   display: block;
+}
+.ds-text-field.form-control {
+  z-index: 800;
 }
 
 // collapsible sidebar css
@@ -463,7 +468,8 @@ a.list-group-item.active span {
   width: 200%;
 } 
 // suppress unwanted elements
-h2.ds-div-head.page-header.first-page-header, div#aspect_artifactbrowser_CommunityBrowser_div_comunity-browser p {
+h2.ds-div-head.page-header.first-page-header, 
+div#aspect_artifactbrowser_CommunityBrowser_div_comunity-browser p {
   display: none;
 }
 // RECENT LIST //
@@ -493,6 +499,28 @@ h2.ds-div-head.page-header.first-page-header, div#aspect_artifactbrowser_Communi
 }
 .col-sm-9.input-group{
   border: none;
+}
+#aspect_discovery_SimpleSearch_field_submit,
+#aspect_artifactbrowser_ConfigurableBrowse_field_submit,
+#aspect_discovery_CollectionSearch_field_submit,
+.btn-primary {
+  background-color: #2b466b;
+  color: #fff;
+  border-color: transparent;
+}
+#aspect_discovery_SimpleSearch_field_submit:hover,
+#aspect_artifactbrowser_ConfigurableBrowse_field_submit:hover,
+#aspect_discovery_CollectionSearch_field_submit:hover,
+#aspect_discovery_CommunitySearch_field_submit:hover {
+  background-color: #396096;
+  color: #fff;
+  border-color: transparent;
+}
+.btn-primary:hover, .btn-primary:focus, .btn-primary.focus, 
+.btn-primary:active, .btn-primary.active, .open>.btn-primary.dropdown-toggle {
+  background-color: #396096;
+  color: #fff;
+  border-color: transparent;
 }
 
 // ITEM VIEW \\
