--- a/dspace/modules/xmlui-mirage2/src/main/webapp/themes/Mirage2/styles/_style.scss
+++ b/dspace/modules/xmlui-mirage2/src/main/webapp/themes/Mirage2/styles/_style.scss
@@ -174,7 +174,9 @@ header .breadcrumb.hidden-xs.hidden-sm a:hover:after, .breadcrumb.hidden-xs.hidd
 .footer-links a, a:visited,
 .ds-table-row a, .ds-table-row a:visited,
 .control-group.col-sm-12 a, a:visited,
-#aspect_eperson_PasswordLogin_div_register a, a:visited {
+#aspect_eperson_PasswordLogin_div_register a, a:visited,
+.file-link a, a:visited,
+.era-h-link a, a:visited {
   position: relative;
 }
 .artifact-title a:hover, 
@@ -186,7 +188,9 @@ header .breadcrumb.hidden-xs.hidden-sm a:hover:after, .breadcrumb.hidden-xs.hidd
 .footer-links a:hover,
 .ds-table-row a:hover,
 .control-group.col-sm-12 a:hover,
-#aspect_eperson_PasswordLogin_div_register a:hover {
+#aspect_eperson_PasswordLogin_div_register a:hover,
+.file-link a:hover,
+.era-h-link a:hover {
   text-decoration: none;
 }
 .artifact-title a:after, a:visited:after, 
@@ -196,7 +200,9 @@ header .breadcrumb.hidden-xs.hidden-sm a:hover:after, .breadcrumb.hidden-xs.hidd
 .ds-referenceSet-list a::after, a:visited::after,
 .ds-table-row a::after, a:visited::after,
 .control-group.col-sm-12 a::after, a:visited::after,
-#aspect_eperson_PasswordLogin_div_register a::after, a:visited::after {
+#aspect_eperson_PasswordLogin_div_register a::after, a:visited::after,
+.file-link a::after, a:visited::after,
+.era-h-link a::after, a:visited::after {
   content: '';
   height: 2.5px;
   position: absolute;
@@ -214,7 +220,9 @@ header .breadcrumb.hidden-xs.hidden-sm a:hover:after, .breadcrumb.hidden-xs.hidd
 .footer-links a:hover::after, a:visited:hover::after,
 .ds-table-row a:hover::after, a:visited:hover::after,
 .control-group.col-sm-12 a:hover::after, a:visited:hover::after,
-#aspect_eperson_PasswordLogin_div_register a:hover::after, a:visited:hover::after {
+#aspect_eperson_PasswordLogin_div_register a:hover::after, a:visited:hover::after,
+.file-link a:hover::after, a:visited:hover::after,
+.era-h-link a:hover::after, a:visited:hover::after {
   width: 100%;
 }
 .footer-links a::after, a:visited::after {
@@ -535,6 +543,10 @@ div#aspect_artifactbrowser_CommunityBrowser_div_comunity-browser p {
   color: #fff;
   border-color: transparent;
 }
+#aspect_discovery_SimpleSearch_field_filter_1 {
+  border: solid #ccc 1px;
+  border-radius: 5px;
+}
 
 // ITEM VIEW \\
 .item-summary-view-metadata, .ds-static-div.primary {
@@ -547,6 +559,9 @@ div#aspect_artifactbrowser_CommunityBrowser_div_comunity-browser p {
 .visible-xs div, .artifact-h-link a, div {
   font-weight: 300;
   font-size: 18px;
+}
+.era-h-link {
+  margin-left: -28px;
 }
 
 // LOGIN STYLES \\
