--- a/dspace/modules/xmlui-mirage2/src/main/webapp/themes/Mirage2/styles/_style.scss
+++ b/dspace/modules/xmlui-mirage2/src/main/webapp/themes/Mirage2/styles/_style.scss
@@ -178,7 +178,8 @@ header .breadcrumb.hidden-xs.hidden-sm a:hover:after, .breadcrumb.hidden-xs.hidd
 .file-link a, a:visited,
 .era-h-link a, a:visited,
 .detail-view a, a:visited,
-#aspect_discovery_CommunityRecentSubmissions_p_recent-submission-view-more a, a:visited {
+#aspect_discovery_CommunityRecentSubmissions_p_recent-submission-view-more a, a:visited,
+#aspect_discovery_SiteRecentSubmissions_p_recent-submission-view-more a, a:visited {
   position: relative;
 }
 .artifact-title a:hover, 
@@ -194,7 +195,8 @@ header .breadcrumb.hidden-xs.hidden-sm a:hover:after, .breadcrumb.hidden-xs.hidd
 .file-link a:hover,
 .era-h-link a:hover,
 .detail-view a:hover,
-#aspect_discovery_CommunityRecentSubmissions_p_recent-submission-view-more a:hover {
+#aspect_discovery_CommunityRecentSubmissions_p_recent-submission-view-more a:hover,
+#aspect_discovery_SiteRecentSubmissions_p_recent-submission-view-more a:hover {
   text-decoration: none;
 }
 .artifact-title a:after, a:visited:after, 
@@ -208,7 +210,8 @@ header .breadcrumb.hidden-xs.hidden-sm a:hover:after, .breadcrumb.hidden-xs.hidd
 .file-link a::after, a:visited::after,
 .era-h-link a::after, a:visited::after,
 .detail-view a::after, a:visited::after,
-#aspect_discovery_CommunityRecentSubmissions_p_recent-submission-view-more a::after, a:visited::after {
+#aspect_discovery_CommunityRecentSubmissions_p_recent-submission-view-more a::after, a:visited::after,
+#aspect_discovery_SiteRecentSubmissions_p_recent-submission-view-more a::after, a:visited::after {
   content: '';
   height: 2.5px;
   position: absolute;
@@ -230,7 +233,8 @@ header .breadcrumb.hidden-xs.hidden-sm a:hover:after, .breadcrumb.hidden-xs.hidd
 .file-link a:hover::after, a:visited:hover::after,
 .era-h-link a:hover::after, a:visited:hover::after,
 .detail-view a:hover::after, a:visited:hover::after,
-#aspect_discovery_CommunityRecentSubmissions_p_recent-submission-view-more a:hover::after, a:visited:hover::after {
+#aspect_discovery_CommunityRecentSubmissions_p_recent-submission-view-more a:hover::after, a:visited:hover::after,
+#aspect_discovery_SiteRecentSubmissions_p_recent-submission-view-more a:hover::after, a:visited:hover::after {
   width: 100%;
 }
 .footer-links a::after, a:visited::after {
@@ -558,10 +562,19 @@ div#aspect_artifactbrowser_CommunityBrowser_div_comunity-browser p {
   color: #fff;
   border-color: transparent;
 }
-#aspect_discovery_SimpleSearch_field_filter_1 {
+#aspect_discovery_SimpleSearch_field_filter_1,
+#aspect_eperson_PasswordLogin_field_login_email {
   border: solid #ccc 1px;
   border-radius: 5px;
 }
+#aspect_discovery_SimpleSearch_field_filter_1:focus,
+#aspect_eperson_PasswordLogin_field_login_email:focus {
+  border-color: #66afe9;
+  outline: 0;
+  -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,0.075), 0 0 8px rgba(102,175,233,0.6);
+  box-shadow: inset 0 1px 1px rgba(0,0,0,0.075), 0 0 8px rgba(102,175,233,0.6);
+}
+
 
 // ITEM VIEW \\
 .item-summary-view-metadata, .ds-static-div.primary {
