--- a/dspace/modules/xmlui-mirage2/src/main/webapp/themes/Mirage2/styles/_style.scss
+++ b/dspace/modules/xmlui-mirage2/src/main/webapp/themes/Mirage2/styles/_style.scss
@@ -179,7 +179,8 @@ header .breadcrumb.hidden-xs.hidden-sm a:hover:after, .breadcrumb.hidden-xs.hidd
 .era-h-link a, a:visited,
 .detail-view a, a:visited,
 #aspect_discovery_CommunityRecentSubmissions_p_recent-submission-view-more a, a:visited,
-#aspect_discovery_SiteRecentSubmissions_p_recent-submission-view-more a, a:visited {
+#aspect_discovery_SiteRecentSubmissions_p_recent-submission-view-more a, a:visited,
+.ds-static-div.col-xs-10.col-sm-11 a, a:visited {
   position: relative;
 }
 .artifact-title a:hover, 
@@ -196,7 +197,8 @@ header .breadcrumb.hidden-xs.hidden-sm a:hover:after, .breadcrumb.hidden-xs.hidd
 .era-h-link a:hover,
 .detail-view a:hover,
 #aspect_discovery_CommunityRecentSubmissions_p_recent-submission-view-more a:hover,
-#aspect_discovery_SiteRecentSubmissions_p_recent-submission-view-more a:hover {
+#aspect_discovery_SiteRecentSubmissions_p_recent-submission-view-more a:hover,
+.ds-static-div.col-xs-10.col-sm-11 a:hover {
   text-decoration: none;
 }
 .artifact-title a:after, a:visited:after, 
@@ -211,7 +213,8 @@ header .breadcrumb.hidden-xs.hidden-sm a:hover:after, .breadcrumb.hidden-xs.hidd
 .era-h-link a::after, a:visited::after,
 .detail-view a::after, a:visited::after,
 #aspect_discovery_CommunityRecentSubmissions_p_recent-submission-view-more a::after, a:visited::after,
-#aspect_discovery_SiteRecentSubmissions_p_recent-submission-view-more a::after, a:visited::after {
+#aspect_discovery_SiteRecentSubmissions_p_recent-submission-view-more a::after, a:visited::after,
+.ds-static-div.col-xs-10.col-sm-11 a:after, a:visited::after {
   content: '';
   height: 2.5px;
   position: absolute;
@@ -234,7 +237,8 @@ header .breadcrumb.hidden-xs.hidden-sm a:hover:after, .breadcrumb.hidden-xs.hidd
 .era-h-link a:hover::after, a:visited:hover::after,
 .detail-view a:hover::after, a:visited:hover::after,
 #aspect_discovery_CommunityRecentSubmissions_p_recent-submission-view-more a:hover::after, a:visited:hover::after,
-#aspect_discovery_SiteRecentSubmissions_p_recent-submission-view-more a:hover::after, a:visited:hover::after {
+#aspect_discovery_SiteRecentSubmissions_p_recent-submission-view-more a:hover::after, a:visited:hover::after,
+.ds-static-div.col-xs-10.col-sm-11 a:hover::after, a:visited:hover::after {
   width: 100%;
 }
 .footer-links a::after, a:visited::after {
