ERA Upgrade : RSS Box Fix

--- a/dspace/modules/xmlui-mirage2/src/main/webapp/themes/Mirage2/styles/_style.scss
+++ b/dspace/modules/xmlui-mirage2/src/main/webapp/themes/Mirage2/styles/_style.scss
@@ -105,6 +105,9 @@ p {
 #main-content {
   padding-right: 40px;
 }
+.ds-static-div.col-xs-2.col-sm-1 {
+  display: none;
+}
 // GLOBAL BACKGROUND IMAGES //
 #background-globe {
   //background-image: url('themes/Mirage2/images/globe-png-icon.png');
