ERA Upgrade : CSS Tidy Up

--- a/dspace/modules/xmlui-mirage2/src/main/webapp/themes/Mirage2/styles/_style.scss
+++ b/dspace/modules/xmlui-mirage2/src/main/webapp/themes/Mirage2/styles/_style.scss
@@ -424,7 +424,8 @@ a#rss-item:hover {
   position: relative;
   z-index: 999;
 }
-#aspect_browseArtifacts_CommunityBrowse_div_community-browse h3 {
+#aspect_browseArtifacts_CommunityBrowse_div_community-browse h3,
+#aspect_browseArtifacts_CollectionBrowse_div_collection-browse h3 {
   border: none;
   font-weight: 300;
 }
